<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:chainUseRtl="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_options_title"
        android:layout_marginTop="@dimen/activity_margin_small"
        android:layout_marginStart="@dimen/activity_margin_icon_large"
        android:layout_marginEnd="@dimen/activity_margin_xxMedium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeBtn" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cameraBtn"
        android:layout_width="@dimen/activity_margin_icon_large"
        android:layout_height="@dimen/activity_margin_icon_large"
        android:layout_marginStart="@dimen/activity_margin_xMedium"
        android:layout_marginTop="@dimen/activity_margin_medium"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/camera_icon_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cameraBtn"
        app:layout_constraintStart_toStartOf="@+id/cameraBtn"
        app:layout_constraintTop_toBottomOf="@+id/cameraBtn" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/pictureBtn"
        android:layout_width="@dimen/activity_margin_icon_large"
        android:layout_height="@dimen/activity_margin_icon_large"
        android:layout_marginTop="@dimen/activity_margin_medium"
        android:layout_marginEnd="@dimen/activity_margin_xMedium"
        android:layoutDirection="ltr"
        android:src="@drawable/ic_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/gallery_icon_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pictureBtn"
        app:layout_constraintStart_toStartOf="@+id/pictureBtn"
        app:layout_constraintTop_toBottomOf="@+id/pictureBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>